
[metadata]
name = FlightDataUtilities
url = https://github.com/flightdataservices/flightdatautilities
author = Flight Data Services Ltd
author_email = developers@flightdataservices.com
maintainer = Flight Data Services Ltd
maintainer_email = developers@flightdataservices.com
description = A collection of tools used in various FlightData projects
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = flight, data, utilities
license = 'Other/Proprietary License'
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable,
    Environment :: Console,
    Intended Audience :: Developers,
    License :: Other/Proprietary License,
    Programming Language :: Python :: 2.7,
    Programming Language :: Python :: Implementation :: CPython,
    Operating System :: OS Independent,
    Topic :: Software Development,

[options]
zip_safe = false
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    blosc
    decorator
    future
    natsort
    numpy
    pyyaml
    requests
    scipy
setup_requires =
    setuptools_scm>=3.3.3
tests_require =
    mock
    nose>=1.0
    responses


[options.packages.find]
exclude = doc, tests, tests.*, utils

[options.extras_require]
dev =
    flake8>=3.7.7
    flake8-assertive>=1.0.1
    flake8-bugbear>=19.3.0
    flake8-coding>=1.3.1
    flake8-commas>=2.0.0
    flake8-comprehensions>=2.1.0
    flake8-docstrings>=1.3.0
    flake8-future-import>=0.4.5
    flake8-isort>=2.7.0
    flake8-logging-format>=0.6.0
    flake8-quotes>=1.0.0
    isort>=4.3.17

[nosetests]
detailed-errors = true
tests=tests

[build]
force = 1

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
