[metadata]
name = FlightDataUtilities
url = https://github.com/flightdataservices/flightdatautilities
author = Flight Data Services Ltd
author_email = developers@flightdataservices.com
maintainer = Flight Data Services Ltd
maintainer_email = developers@flightdataservices.com
description = A collection of tools used in various FlightData projects
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = flight, data, utilities
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Open Software License 3.0 (OSL-3.0)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[options]
zip_safe = false
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    decorator
    deprecated
    elasticsearch
    natsort
    numpy
    pyyaml
    requests[security]
    scipy
setup_requires =
    setuptools_scm>=3.3.3
tests_require =
    responses


[options.packages.find]
exclude = tests, tests.*, utils

[check-manifest]
ignore = .mailmap

[flake8]
doctests = true
exclude = build,dist,.eggs,.git,.tox,__pycache__
hang-closing = false
ignore = B001,B005,E121,E123,E126,E501,E731,FI1,FI9,W504
max-complexity = 20
max-doc-length = 119
max-line-length = 119
select = A5,B0,B3,B9,C,D2,D3,D4,E,F,G,I0,Q0,W
inline-quotes = single
multiline-quotes = single
docstring-quotes = double
no-accept-encodings = true

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = flightdatautilities
known_internal =
line_length = 119
multi_line_output = 5
sections = FUTURE,STDLIB,THIRDPARTY,INTERNAL,FIRSTPARTY,LOCALFOLDER
use_parentheses = true

[pycodestyle]
exclude = build,dist,.eggs,.git,.tox,__pycache__
hang-closing = false
ignore = E121,E123,E126,E501,E731,W504
max-doc-length = 119
max-line-length = 119

[pydocstyle]
add-ignore = D1
